estabilizado linkagem entre as rotas

--- a/Projeto StudyEasy/src/Enem/enem.html
+++ b/Projeto StudyEasy/src/Enem/enem.html
@@ -15,7 +15,7 @@
                     <li><a href="../Home/home.html">Início</a></li>
                     <li><a href="enem.html" class="active">Enem</a></li>
                     <li><a href="#">Matérias</a></li>
-                    <li><a href="../Profile/profile.html">Feedbacks</a></li>
+                    <li><a href="../Feedback/feedback.html">Feedbacks</a></li>
                     <li><a href="../Profile/profile.html">Perfil</a></li>
                 </ul>
             </nav>
