--- a/Projeto StudyEasy/src/Feedback/feedback.html
+++ b/Projeto StudyEasy/src/Feedback/feedback.html
@@ -15,8 +15,8 @@
                     <li><a href="../Home/home.html">Início</a></li>
                     <li><a href="../Enem/enem.html">Enem</a></li>
                     <li><a href="#">Matérias</a></li>
+                    <li><a href="feedback.html" class="active">Feedbacks</a></li>
                     <li><a href="../Profile/profile.html">Perfil</a></li>
-                    <li><a href="feedback.html" class="active">Feedback</a></li>
                 </ul>
             </nav>
         </aside>
