--- a/Projeto StudyEasy/src/Profile/profile.html
+++ b/Projeto StudyEasy/src/Profile/profile.html
@@ -15,7 +15,7 @@
                     <li><a href="../Home/home.html">Início</a></li>
                     <li><a href="#">Enem</a></li>
                     <li><a href="#">Matérias</a></li>
-                    <li><a href="../Profile/profile.html">Feedbacks</a></li>
+                    <li><a href="../Feedback/feedback.html">Feedbacks</a></li>
                     <li><a href="profile.html" class="active">Perfil</a></li>
                 </ul>
             </nav>
@@ -29,41 +29,41 @@
             <section class="content">
                 <h1>Minha Conta</h1>
                 <div class="profile-container">
-                    <div class="profile-picture">
+                    <!-- <div class="profile-picture">
                         <img src="profile-placeholder.png" alt="Foto de Perfil">
-                    </div>
+                    </div> -->
                     <div class="profile-details">
                         <h2>Adley Rodrigues</h2>
                         <p>adleyrodrigues2015@gmail.com</p>
                     </div>
                 </div>
                 <div class="profile-form">
-                    <h3>Informações Públicas</h3>
+                    <!-- <h3>Informações Públicas</h3> -->
                     <form>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="displayName">Nome de Exibição</label>
                             <input type="text" id="displayName" name="displayName" value="Adley Rodrigues">
-                        </div>
+                        </div> -->
                         <h3>Informações Pessoais</h3>
                         <div class="form-group">
                             <label for="login">Login</label>
-                            <input type="text" id="login" name="login" value="adleyrodrigues" readonly>
+                            <input type="text" id="login" name="login"  readonly>
                         </div>
                         <div class="form-group">
                             <label for="firstName">Nome</label>
-                            <input type="text" id="firstName" name="firstName" value="Adley">
+                            <input type="text" id="firstName" name="firstName" >
                         </div>
                         <div class="form-group">
                             <label for="lastName">Sobrenome</label>
-                            <input type="text" id="lastName" name="lastName" value="Rodrigues">
+                            <input type="text" id="lastName" name="lastName" >
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="email" value="adleyrodrigues2015@gmail.com">
+                            <input type="email" id="email" name="email" >
                         </div>
                         <div class="form-group">
                             <label for="phone">Telefone</label>
-                            <input type="tel" id="phone" name="phone" value="(88) 9 8765-4321">
+                            <input type="tel" id="phone" name="phone">
                         </div>
                         <button type="submit">Salvar</button>
                     </form>
