Inserindo as meterias na side bar

--- a/Projeto StudyEasy/src/Home/home.html
+++ b/Projeto StudyEasy/src/Home/home.html
@@ -17,18 +17,18 @@
             <li>
               <a href="#" id="materias-link">Matérias</a>
               <ul id="materias-list" class="hidden">
-                <li><a href="#">Matemática</a></li>
-                <li><a href="#">Português</a></li>
-                <li><a href="#">História</a></li>
-                <li><a href="#">Geografia</a></li>
+                <li><a href="../Materias/matematica.html">Matemática</a></li>
+                <li><a href="../Materias/portugues.html">Português</a></li>
+                <li><a href="../Materias/historia.html">História</a></li>
+                <li><a href="../Materias/geografia.html">Geografia</a></li>
               </ul>
             </li>
-            <li><a href="../Feedback/feedback.html">Feedbacks</a></li>
+            <li><a href="../Feedback/feedback.html">Feedback</a></li>
             <li><a href="../Profile/profile.html">Perfil</a></li>
           </ul>
         </nav>
       </aside>
-      <main class="main-content">
+      <main class="main-content position-relative">
         <header class="header">
           <div class="user-info">
             <p>Bem-vindo, <span id="username">Adley</span></p>
@@ -40,6 +40,7 @@
             Bem-vindo ao StudyEasy! Aqui você pode acessar seus cursos,
             materiais de estudo e muito mais.
           </p>
+          <img src="../../assets/teste.gif" alt="Imagem de Boas-vindas" class="welcome-image">
         </section>
       </main>
     </div>
